Update MVC template apple-to-apple DDD logic and add new arg "--design"

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     build:
       context: .
       dockerfile: compose/app/Dockerfile
-      target: dev
+      target: prod
       platforms:
         - linux/amd64
     env_file:
