Move common files and update cli

--- a/src/common/compose/app/Dockerfile
+++ b/src/common/compose/app/Dockerfile
@@ -19,7 +19,7 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
 WORKDIR /opt/project
-COPY pyproject.toml README.md uv.lock alembic.ini ./
+COPY pyproject.toml README.md uv.lock{% if orm == "sqlalchemy" %} alembic.ini{% endif %} ./
 COPY src ./src
 RUN --mount=type=cache,target=/root/.cache/uv \
     uv sync --frozen --no-dev
