--- a/src/common/alembic.ini
+++ b/src/common/alembic.ini
@@ -1,5 +1,5 @@
 [alembic]
-script_location = src/app/infrastructure/database/migrations
+script_location = {{ alembic_script_location }}
 prepend_sys_path = .
 version_path_separator = os
 sqlalchemy.url = postgresql+asyncpg://postgres:postgres@localhost:5432/robyn_backend_template
