--- a/src/common/pyproject.toml
+++ b/src/common/pyproject.toml
@@ -3,15 +3,11 @@ requires = ["setuptools>=68"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "robyn-backend-template"
+name = "{{ name }}"
 version = "0.1.0"
-description = "Sample Robyn + Granian service backed by SQLite/PostgreSQL via SQLAlchemy and Pydantic schemas."
+description = "{{ name|capitalize }} backend project with {{ design|upper }} design pattern and {{ 'SQLAlchemy' if orm == 'sqlalchemy' else orm|capitalize }} ORM"
 readme = "README.md"
-license = {text = "MIT"}
-requires-python = ">=3.12"
-authors = [
-  {name = "Leshqa", email = "slav4ik77777@gmail.com"}
-]
+requires-python = ">=3.11"
 dependencies = [
   "robyn>=0.58.0",
   "granian[uvloop]>=1.3.1",
@@ -206,9 +202,13 @@ omit = [
   "manage.py",
 ]
 
-[tool.aerich]
 {%- if orm == "tortoise" %}
+[tool.aerich]
 tortoise_orm = "{{ tortoise_orm_path }}"
 location = "{{ tortoise_migrations_location }}"
 src_folder = "./."
 {%- endif %}
+
+[tool.robyn-config]
+design = "{{ design }}"
+orm = "{{ orm }}"
