Fix missing import and uv lock update

--- a/src/common/compose/app/Dockerfile
+++ b/src/common/compose/app/Dockerfile
@@ -22,7 +22,7 @@ WORKDIR /opt/project
 COPY pyproject.toml README.md uv.lock{% if orm == "sqlalchemy" %} alembic.ini{% endif %} ./
 COPY src ./src
 RUN --mount=type=cache,target=/root/.cache/uv \
-    uv sync --frozen --no-dev
+    uv sync --no-dev
 COPY compose/app/dev.sh /tmp/dev.sh
 COPY compose/app/prod.py /tmp/prod.py
 
