--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ dev = [
   "httpx>=0.27.0",
   "build>=1.2.1",
   "twine>=1.6.0",
+  "Sphinx>=8.0.0",
+  "sphinx-rtd-theme>=3.0.0",
+  "myst-parser>=2.0.0",
 ]
 
 [project.scripts]
