--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "robyn-config"
-version = "0.1.1"
-description = "CLI for scaffolding Robyn backend templates (DDD/MVC with SQLAlchemy or Tortoise)."
+version = "0.2.0"
+description = "A powerful CLI tool to bootstrap and manage production-ready Robyn applications with best practices built-in."
 readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.11"
