Bug: Change paths and including all files for package

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,2 @@
-recursive-include src/common *
-include src/common/.dockerignore
-include src/common/.env.example
-include src/common/.gitignore
+recursive-include src *
 global-exclude __pycache__ *.py[cod] .DS_Store
