--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ authors = [
 ]
 dependencies = [
   "click>=8.1.7",
-  "Jinja2>=3.1"
+  "Jinja2>=3.1",
+  "textual>=0.85.0",
 ]
 
 [project.optional-dependencies]
